# g1_hybrid_prior

./: .gitignore  .gitmodules  README.md  pyproject.toml  test.ipynb
config/: ExpertPPO.yaml  ImitationLearning.yaml  network.yaml  robots.yaml
src/: data_test.py  robot_cfg.py
src/g1_hybrid_prior/: amp_data_analysis.py  data_preprocessor.py  data_test.py  data_visualization.py  dataset.py  dataset_amp.py  dataset_builder.py  expert_policy.py  helpers.py  hybrid_imitation_block.py  residual_vq.py  robot_cfg.py  utils.py
src/g1_hybrid_prior/dataset/: data_preprocessor.py  data_visualization.py  dataset.py  dataset_amp.py  dataset_builder.py
src/g1_hybrid_prior/models/: expert_policy.py  hybrid_imitation_block.py
src/g1_hybrid_prior/trainers/: imitation_trainer.py
src/test/: check_dataset_frames.py  low_level_training_test.py  test_fk_sanity.py
